service/tests/models/snapshots/categories/can_find_tshirts_category_by_pid@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: 101,
        pid: f63b79c9-4753-40c3-bc78-8c4fd38abd5b,
        name: "t-shirts",
        slug: "t-shirts",
        image_link: "https://cdn.example.com/categories/tshirts.png",
        description: None,
        parent_id: None,
        created_at: 2026-06-26T08:13:00+00:00,
        updated_at: 2026-06-26T08:14:00+00:00,
        deleted_at: None,
    },
)
