service/tests/models/snapshots/categories/can_update_category_when_slug_already_exists@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "trousers",
        slug: "t-shirts-1",
        image_link: "https://images.unsplash.com/photo-1594633312681-425c7b97ccd1?auto=format&fit=crop&w=900&q=80",
        description: Some(
            "Duplicate category",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
