service/tests/models/snapshots/categories/can_update_category_with_name_image_and_description@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "chinos",
        slug: "chinos",
        image_link: "https://cdn.example.com/categories/chinos.png",
        description: Some(
            "Smart casual trousers",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
