service/tests/models/snapshots/categories/can_update_category_with_same_name@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Ok(
    Category {
        id: ID,
        pid: PID,
        name: "t-shirts",
        slug: "t-shirts",
        image_link: "https://cdn.example.com/categories/tees.png",
        description: Some(
            "Short sleeve tops",
        ),
        parent_id: None,
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
