service/tests/models/snapshots/categories/cannot_create_category_when_name_already_exists@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Category accessories already exists!",
    ),
)
