service/tests/models/snapshots/categories/cannot_update_category_when_name_already_exists@categories.snap
---
source: tests/models/categories.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Category t-shirts already exists!",
    ),
)
